Update media queries for mobile devices - Resolve hover effect on mobile for projects page

--- a/portfolio/src/index.css
+++ b/portfolio/src/index.css
@@ -26,7 +26,7 @@ body {
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   padding: 10px;
-  margin-top: 5px;
+  margin-top: 10px;
   transition: .5s;
 }
 
@@ -46,7 +46,8 @@ img {
   width: 410px;
   transition: .5s;
   background-color: #DADEE2;
-  margin-bottom: 17px;
+  margin-top: 10px;
+  margin-bottom: 20px;
 }
 
 .container-1 p {
@@ -69,21 +70,45 @@ img {
   color: #3A73AA;
 }
 
+@media (min-height: 1000px) {
+  .container-1 h1 {
+    font-size: 3.5rem;
+    padding: 10px;
+    margin-top: 35px;
+  }
+
+  .container-1 h2 {
+    font-size: 2.2rem;
+  }
+
+  .container-1 img {
+    height: 500px;
+    width: 500px;
+    margin-top: 25px;
+    margin-bottom: 25px;
+  }
+
+  .container-1 p {
+    margin: 3px;
+    font-size: 15px;
+
+  }
+}
+
 @media (max-width: 664px) {
   .container-1 h1 {
-    font-size: 3.2rem;
+    font-size: 3.3rem;
     padding: 10px;
     margin-top: 24px;
   }
   
   .container-1 h2 {
-    font-size: 1.8rem;
-    margin-bottom: 0px;
+    font-size: 1.9rem;
   }
   
   .container-1 img {
-    height: 370px;
-    width: 370px;
+    height: 380px;
+    width: 380px;
     margin-top: 15px;
     margin-bottom: 15px;
   }
@@ -103,11 +128,11 @@ img {
   }
 }
 
-@media (max-width: 420px) {
+@media (max-width: 435px) {
   .container-1 h1 {
     font-size: 3.2rem;
     padding: 10px;
-    margin-top: 33px;
+    margin-top: 25px;
   }
   
   .container-1 h2 {
@@ -129,6 +154,62 @@ img {
   
   .container-1 .first-p {
     margin-top: 6px;
+  }
+}
+
+@media (max-width: 415px) {
+  .container-1 h1 {
+    font-size: 3.4rem;
+    margin-top: 50px;
+  }
+  
+  .container-1 h2 {
+    font-size: 2rem;
+  }
+  
+  .container-1 img {
+    height: 340px;
+    width: 340px;
+    margin-top: 35px;
+    margin-bottom: 35px;
+  }
+}
+
+@media (max-width: 375px) {
+  .container-1 h1 {
+    font-size: 3.2rem;
+    margin-top: 20px;
+  }
+  
+  .container-1 h2 {
+    font-size: 1.8rem;
+  }
+  
+  .container-1 img {
+    margin-top: 20px;
+    margin-bottom: 20px;
+  }
+}
+
+@media (max-width: 280px) {
+  .container-1 h1 {
+    font-size: 2.5rem;
+    margin-top: 20px;
+  }
+  
+  .container-1 h2 {
+    font-size: 1.5rem;
+  }
+  
+  .container-1 img {
+    height: 250px;
+    width: 250px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+  }
+
+  .container-1 p {
+    font-size: 10px;
   }
 }
 
@@ -173,6 +254,8 @@ img {
   align-self: center;
   color: white;
   font-family: 'Oswald', sans-serif;
+  margin-left: 10px;
+  margin-right: 10px;
 }
 
 .img-container:hover,
@@ -203,28 +286,39 @@ img {
   }
 }
 
-@media (max-width: 420px) {
+@media (max-width: 435px) {
   .img-container {
     width: 290px;
     height: 400px;
   }
+}
+
+@media (hover: none) {
+  .img-container {
+    box-shadow: inset 500px 0 0 0 rgba(116, 135, 154, 0.8);
+    /* rgba(90, 108, 126, 0.8) */
+    /* rgba(51, 65, 79, 0.8) */
+  }
 
   .img-container h1 {
     opacity: 1;
-    mix-blend-mode: difference;
     text-align: center;
-    /* color: #B7CFE8; */
   }
   
   .img-container p {
     opacity: 1;
-    mix-blend-mode: difference;
     text-align: center;
-    /* color: #B7CFE8; */
   }
   
   .img-container:hover {
     box-shadow: none;
+  }
+}
+
+@media (max-width: 280px) {
+  .img-container {
+    width: 210px;
+    height: 300px;
   }
 }
 
@@ -270,13 +364,11 @@ img {
 .navbar-child h1 {
   color: #7ABBFE;
   font-size: 37px;
-  /* text-decoration: underline; */
 }
 
 .navbar-child p {
   color: #7ABBFE;
   font-size: 17.5px;
-  /* text-decoration: underline; */
 }
 
 .linked-icon, .github-icon, .home-icon {
@@ -351,6 +443,7 @@ img {
 
   .navbar-child h1 {
     margin-top: 22px;
+    text-decoration: underline;
   }
 
   .navbar-child p {
@@ -398,7 +491,7 @@ img {
   }
 
   .navbar-child h1, .navbar-child p {
-    margin-left: 15px;
+    margin-left: 10px;
   }
 
   .navbar-child h1 {
@@ -407,6 +500,30 @@ img {
 
   .navbar-child p {
     margin-top: 0px;
+  }
+}
+
+@media (max-width: 280px) {
+  .icons-container {
+    flex-direction: column;
+    position: absolute;
+    top: 23px;
+    margin-right: 18px;
+  }
+
+  .linked-icon, .github-icon, .home-icon {
+    font-size: 22px;
+    margin-top: 3px;
+    margin-right: 0px;
+  }
+
+  .navbar-child h1 {
+    margin-top: 45px;
+    font-size: 25px;
+  }
+
+  .navbar-child p {
+    font-size: 10px;
   }
 }
 
